# task_management_system

./: Dockerfile  README.md  docker-compose.yml  fixtures.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: settings.py  urls.py
core/: models.py  selectors.py  serializers.py  tasks.py  urls.py
core/apis/: views.py
core/migrations/: 0001_initial.py
core/services/: distribution.py  scaling.py
core/tests/: conftest.py  test_apis.py  test_services.py
task_management_system/: settings.py  urls.py
