[project]
name = "task-management-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django==5.1.3",
    "djangorestframework==3.15.2",
    "celery==5.4.0",
    "redis==5.2.0",
    "drf-spectacular==0.27.2",
    "psycopg2-binary==2.9.10",
]
